<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/list"
        android:orderInCategory="100"
        android:title="@string/drawe_list"
        app:showAsAction="never" />

    <item
         android:id="@+id/offer_trip_m"
         android:title="@string/Offer_trip"
        android:orderInCategory="200"
        app:showAsAction="never"
        ></item>

    <item
        android:id="@+id/request_trip_m"
        android:title="@string/request_toolbar"
        android:orderInCategory="200"
        app:showAsAction="never"
        ></item>
    <item
        android:id="@+id/setting_m"
        android:title="@string/action_settings"
        android:orderInCategory="300"
        app:showAsAction="never"
        ></item>
    <item
        android:id="@+id/edit_accunt_m"
        android:title="@string/Edit_account"
        android:orderInCategory="300"
        app:showAsAction="never"
        ></item>
</menu>
