<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="6"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.replyCheck.graduation.yallamana.presenation.login.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@drawable/com_facebook_button_login_silver_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="280dp"
            android:layout_height="140dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/no_pic_person" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="You are not logged in !"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:text="Veriication Sucessfull" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:background="@color/grey_100"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:theme="@style/ThemeOverlay.MyLightEditText" />

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number"
                    android:textColor="@color/green"

                    android:theme="@style/ThemeOverlay.MyLightEditText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">


                <Button
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>
