<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.graduation.yallamana.presenation.signup.DriverFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/toolbar"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="56dp"
            android:text="@string/car_information"
            android:textColor="#4CAF50"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/idImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="32dp"
            android:background="#FFFFFF"
            android:src="@drawable/ic_file_upload_black_24dp" />

        <ImageButton
            android:id="@+id/licenseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/idImage"
            android:layout_alignRight="@+id/idImage"
            android:layout_below="@+id/idImage"
            android:layout_marginTop="18dp"
            android:background="#FFFFFF"
            android:src="@drawable/ic_file_upload_black_24dp" />

        <ImageButton
            android:id="@+id/CarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/licenseImage"
            android:layout_alignStart="@+id/licenseImage"
            android:layout_below="@+id/licenseImage"
            android:layout_marginTop="18dp"
            android:background="#FFFFFF"
            android:src="@drawable/ic_file_upload_black_24dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/idImage"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/idImage"
            android:layout_toRightOf="@+id/idImage"
            android:text="@string/car_id_image"
            android:textColor="#4CAF50"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_alignTop="@+id/licenseImage"
            android:text="@string/car_license_image"
            android:textColor="#4CAF50"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_alignTop="@+id/CarImage"
            android:text="@string/car_image"
            android:textColor="#4CAF50"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="74dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="#4CAF50"
            android:text="@string/yalla"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView9"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:background="#FFFFFFFF"
            android:src="@drawable/ic_add_black_24dp" />

    </RelativeLayout>
</FrameLayout>
